<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_import"
            android:title="@string/menu_import" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
